[gd_scene load_steps=2 format=3 uid="uid://d4jp8ioukxabgh08"]

[ext_resource type="Script" path="res://addons/universal_framework/game/ui/level_up_panel.gd"]

[node name="LevelUpPanel" type="Control"]
layout_mode = 3
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundDim" type="ColorRect" parent="."]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_left = 0.0
anchors_top = 0.0
anchors_right = 1.0
anchors_bottom = 1.0

[node name="BackgroundPanel" type="PanelContainer" parent="CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(500, 600)

[node name="PanelStyleBox" type="StyleBox" parent="CenterContainer/BackgroundPanel"]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/BackgroundPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="CenterContainer/BackgroundPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LEVEL UP!"
theme_override_font_sizes/font_size = 32

[node name="LevelLabel" type="Label" parent="CenterContainer/BackgroundPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level X"
theme_override_font_sizes/font_size = 24

[node name="SkillDescriptionLabel" type="Label" parent="CenterContainer/BackgroundPanel/VBoxContainer"]
layout_mode = 2
text = "Choose a skill upgrade:"

[node name="SkillButtons" type="VBoxContainer" parent="CenterContainer/BackgroundPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
